deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ips
  labels:
    app: ips
